--- a/shard.yml
+++ b/shard.yml
@@ -8,6 +8,7 @@ targets:
   mitm:
     main: src/main.cr
 
-crystal: 0.36.1
+# TODO: Update to "~> 1" once the time comes.
+crystal: ">= 0.36, < 2"
 
 license: MIT
